--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hbs": "^4.0.1",
     "mongodb": "^3.1.10",
     "mongoose": "^5.4.1",
+    "node-cache": "^4.2.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
     "xml-js": "^1.6.8"
